log/build_2025-10-09_15-51-13/tortoisebot_gazebo/stderr.log
  File "/home/arz-1017/task/task_ws/install/tortoisebot_gazebo/lib/python3.12/site-packages/tortoisebot_gazebo/laserdata.py", line 11
    def laser_calback(self, msg_data){
                                     ^
SyntaxError: expected ':'

